--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -12,8 +12,10 @@ h1{
 }
 .wrap{
     display: grid;
-    grid-row: 300px 150px auto;
-    grid-column: 6fr 1fr;
+    height: 100vh;
+    width: 100vw;
+    grid-template-rows: 300px 75px 1fr;
+    grid-template-columns: 5fr 1fr;
     grid-template-areas: 
     "he he"
     "na na"
@@ -27,11 +29,8 @@ h1{
     justify-content: space-between;
     align-items: center;
 }
-
-
 #logo{
     height: 300px;
-    display: flex;
     display: flex;
 }
 #head-text{
@@ -39,7 +38,20 @@ h1{
     padding-left:40px ;
     background-color: transparent;
 }
-#nav_top{
+.nav_top{
     grid-area: na;
     background-color: brown;
+    display: flex;
+
+}
+.nav_top a {
+    background-color: transparent;
+    color: tomato;
+}
+.home_main{
+    grid-area: mn;
+}
+.as-main{
+    grid-area: as;
+
 }
