--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -33,25 +33,25 @@ h1{
     height: 300px;
     display: flex;
 }
-#head-text{
+#fennessy-text{
     color: orange;
     padding-left:40px ;
     background-color: transparent;
 }
-.nav-top{
+.nav-link{
     grid-area: na;
    background-color: rgb(121, 61, 21);
    display: flex;
    flex-direction: column;
 }
-.nav-top li a{
+.nav-link li a{
     color: rgb(185, 145, 84);
     background-color: transparent;
 }
-.home_main{
+.main-text{
     grid-area: mn;
 }
-.as-main{
+.main-as{
     grid-area: as;
 
 }
